See project button contrast fixed

--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ nav .menu-bar {
 }
 
 .btn:hover {
-  background-color: #5564eb;
+  background-color: #2d40e6;
   border-radius: 8px;
   color: #fff;
 }
